# sunset

./: .gitignore  LICENSE.txt  NOTICE  README.md  hacs.json  pyproject.toml  requirements_test.txt  setup.cfg
.github/: workflows
.github/workflows/: hassfest.yml  pytest.yml
custom_components/redshift/: __init__.py  calculator.py  const.py  manifest.json  services.yaml
custom_components/sunset/: __init__.py  manifest.json  services.yaml
tests/: common.py  conftest.py  const.py  test_brightness.py  test_brightness_calculator.py  test_daytime_calculator.py  test_init.py  test_redshift.py  test_redshift_calculation.py
