[project]
name = "sunset"
version = "0.1.0"
description = "Mimic twilight to get yourself accustomed to the evening for better sleep"
readme = "README.md"
authors = [
    { name = "Johannes Mueller", email = "github@johannes-mueller.org" }
]
requires-python = ">=3.14"
dependencies = ["homeassistant"]

[dependency-groups]
dev = [
    "homeassistant-stubs>=2025.4.4",
    "pytest>=9.0.0",
    "pytest-homeassistant-custom-component>=0.13.313",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"


[too.ruff]

# Same as Black.
line-length = 88
indent-width = 4



[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["ALL"]
ignore = ["S101", "ANN001", "N812", "B905"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "E402", "ARG001", "ANN201", "ANN202", "PLR2004"]
